# zsys

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_RU.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_RU.md  LICENSE  Makefile  PLAN_tdlib.md  QUICKSTART.md  QUICKSTART_RU.md  README.md  README_RU.md  STRUCTURE.md  STRUCTURE_RU.md  __init__.py  pyproject.toml  setup.py  setup_core.py  transaction.py
.github/workflows/: build.yml  ci.yml
bindings/go/: go.mod  zsys.go
bindings/rust/: Cargo.toml  build.rs
bindings/rust/src/: lib.rs
cmake/: zsys_core.pc.in  zsys_coreConfig.cmake.in
docs/: architecture.md  architecture_RU.md  c_api.md  c_api_RU.md  iskrateam_integration.md  wakelink_integration.md
examples/: README.md  README_RU.md  aiogram_bot_example.py  blockchain_example.py  crypto_example.py  pyrogram_userbot_example.py  storage_example.py
scripts/: install_tdlib.sh
tests/: README.md  README_RU.md  __init__.py  benchmark.py  conftest.py  test_blockchain.py  test_comprehensive_architecture.py  test_config.py  test_core_interfaces.py  test_core_models.py  test_crypto.py  test_db.py  test_extended_architecture.py  test_fonts.py  test_http.py  test_i18n.py  test_integration_unified_system.py  test_log.py  test_modules.py  test_storage.py  test_unified_models_orm.py  test_utils.py
zsys/: __init__.py
zsys/_core/: __init__.py
zsys/_ctypes/: __init__.py
zsys/api/: __init__.py  api_adapter.py
zsys/api/fastapi/: __init__.py  base.py
zsys/bindings/: __init__.py
zsys/bindings/python/: __init__.py  zsys_cffi.py
zsys/blockchain/: __init__.py  evm_chain.py  simple_chain.py
zsys/config/: __init__.py  constants.py  env.py
zsys/control/: __init__.py  control.py
zsys/core/: __init__.py
zsys/core/bindings/rust/: Cargo.toml  build.rs
zsys/core/bindings/rust/src/: lib.rs
zsys/core/c/: CMakeLists.txt
zsys/core/c/include/: zsys_client.h  zsys_user.h
zsys/core/c/src/: zsys_chat.c  zsys_client.c  zsys_core.c
zsys/core/config/: __init__.py  base.py
zsys/core/dataclass_models/: __init__.py  bot.py  chat.py  client.py  context.py  message.py  user.py  wallet.py
zsys/core/exceptions/: __init__.py  api.py  base.py  blockchain.py  client.py  config.py  crypto.py  license.py  media.py  module.py  network.py  resource.py  storage.py  validation.py
zsys/core/interfaces/: __init__.py  blockchain.py  bot.py  chat.py  cipher.py  client.py  media.py  storage.py  wallet.py
zsys/core/logging/: README.md  README_RU.md  __init__.py  base.py  interface.py
zsys/crypto/: __init__.py  aes.py  ecc.py  rsa.py
zsys/crypto/c/: CMakeLists.txt
zsys/crypto/c/include/: zsys_crypto.h
zsys/crypto/c/src/: zsys_crypto.c
zsys/data/: __init__.py
zsys/data/orm/: __init__.py  base.py  bot.py  chat.py  client.py  media_file.py  message.py  user.py  wallet.py
zsys/data/schemas/: __init__.py  base.py  bot.py  chat.py  client.py  common.py  media.py  message.py  user.py  wallet.py
zsys/go/: go.mod
zsys/i18n/: __init__.py  _i18n_fast.pyx  i18n.go  i18n.py
zsys/i18n/c/: CMakeLists.txt
zsys/i18n/c/src/: bind_i18n.c
zsys/include/: zsys_chat.h  zsys_core.h  zsys_storage.h
zsys/log/: __init__.py  base.py  bind_log.c  log.go  printer.py
zsys/log/c/: CMakeLists.txt
zsys/log/c/include/: zsys_log.h
zsys/log/c/src/: zsys_log.c
zsys/modules/: README.md  README_RU.md  __init__.py  _router_dispatch.pyx  loader.py  modules.go  registry.py  router.py  setup.py  watcher.py
zsys/modules/bindings/rust/: Cargo.toml  build.rs
zsys/modules/bindings/rust/src/: lib.rs
zsys/modules/c/: CMakeLists.txt
zsys/modules/c/src/: bind_modules.c  zsys_registry.c  zsys_router.c
zsys/modules/context/: __init__.py  aiogram.py  base.py  pyrogram.py  tdlib.py  telebot.py
zsys/modules/examples/: __init__.py  help.py  ping.py  say.py
zsys/permissions/: __init__.py  media.py
zsys/resources/: README.md  __init__.py
zsys/resources/locales/: en.cbor  en.json
zsys/resources/templates/: 404_error.html  500_error.html  admin.html  base.html  login.html  logs_control.html  security.html  statistics.html  users.html
zsys/rust/: Cargo.toml  build.rs
zsys/rust/src/: lib.rs
zsys/security/: __init__.py  aes.py  crypto.py  domain.py  ecc.py  rsa.py
zsys/security/licensing/: __init__.py  license_key_manager.py  manager.py
zsys/services/: __init__.py  media_service.py
zsys/src/: _zsys_core.c  zsys_core.c  zsys_i18n.c  zsys_registry.c  zsys_router.c  zsys_user.c
zsys/storage/: __init__.py  base.py  bind_storage.c  duckdb.py  factory.py  lmdb.py  mongodb.py  orm.py  pickledb.py  redis.py  sqlite.py  storage.go  tinydb.py
zsys/storage/c/: CMakeLists.txt
zsys/storage/c/src/: zsys_storage.c
zsys/telegram/: README.md  __init__.py  binding.py  client.py  enums.py  errors.py  filters.py  pyrogram.py  router.py  tdlib_installer.py  telegram.go  types.py
zsys/telegram/aiogram/: __init__.py  bot.py  context.py  router.py
zsys/telegram/c/: CMakeLists.txt
zsys/telegram/pyrogram/: __init__.py  client.py  context.py  decorators.py  help.py  interact.py  message.py  modules.py  multi_client.py  router.py  session.py  watcher.py
zsys/telegram/scripts/: install_tdlib.sh
zsys/telegram/tdlib/: __init__.py  binding.py  client.py  config.py  errors.py  filters.py  router.py  types.py
zsys/telegram/tdlib/c/: CMakeLists.txt
zsys/telegram/tdlib/c/include/: tg.h
zsys/telegram/tdlib/c/src/: tg_account.c  tg_auth.c  tg_chat.c  tg_dispatch.c  tg_internal.h  tg_message.c
zsys/telegram/telebot/: __init__.py  context.py  router.py
zsys/telegram/telethon/: __init__.py  client.py
zsys/transport/: __init__.py
zsys/transport/http/: __init__.py  base.py  client.py  retry.py
zsys/transport/wss/: __init__.py
zsys/utils/: __init__.py  android.py  bind_utils.c  cache.py  decorators.py  errors.py  filesystem.py  git.py  hash.py  http.py  media.py  message_utils.py  meta.py  terminal.py  text.py  time.py  utils.go  versions.py
zsys/utils/c/: CMakeLists.txt
zsys/utils/c/include/: zsys_utils.h
zsys/utils/c/src/: zsys_utils.c
(+77 files in other folders)
